<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#f4f4f4">

    <!-- Title and Subtitle -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content"
        android:text="@string/metric_converter"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center" />

    <TextView
        android:id="@+id/authorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/myname"
        android:textSize="16sp"
        android:gravity="center" />

    <!-- Metric Selection (Dari) -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="#333333"
        android:background="#F4F4F4"
        android:text="@string/dari" />

    <Spinner
        android:id="@+id/metricSpinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/field"
        android:layout_marginBottom="30dp"
        android:spinnerMode="dropdown"
        android:hint="--Pilih Metrik"
        android:textColor="@color/hint"/>

    <!-- Source Unit Selection (Satuan) -->
    <Spinner
        android:id="@+id/unitFromSpinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/field"
        android:enabled="false"
        android:hint="--Pilih Satuan"
        android:textColor="@color/hint"/>

    <!-- Target Unit Selection -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"
        android:textColor="#333333"
        android:background="#F4F4F4"
        android:text="@string/ke" />
    <Spinner
        android:id="@+id/unitToSpinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:background="@color/field"
        android:enabled="false"
        android:hint="--Pilih Satuan"
        android:textColor="@color/hint"/>


    <!-- Input Field -->
    <EditText
        android:id="@+id/inputValue"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:maxWidth="488dp"
        android:inputType="number"
        android:hint="@string/enter_value"
        android:enabled="false"
        android:importantForAutofill="no" />


    <!-- Result Display -->
    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textColor="#333333"
        android:background="#F4F4F4"
        android:text="@string/result"
        android:textSize="18dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background3"
        android:padding="8dp">

        <TextView
            android:id="@+id/btn_convert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/convert"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

</LinearLayout>
